minio/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ## Remove if using CA signed certificate
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |
      client_max_body_size 0;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
spec:
  tls:
  - hosts:
      - yuno-console.bukkake.life
    secretName: minio-console-tls
  ingressClassName: nginx-external
  rules:
  - host: yuno-console.bukkake.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yuno-console
            port:
              number: 9443
