minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-yuno-ingress
  namespace: minio-yuno
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 5t
    nginx.ingress.kubernetes.io/server-snippet: |
      client_max_body_size 0;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
spec:
  tls:
  - hosts:
      - yuno.waifus.dev
      - yuno-console.waifus.dev
    secretName: minio-yuno-tls
  ingressClassName: nginx
  rules:
  - host: yuno.waifus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
  - host: yuno-console.waifus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yuno-console
            port:
              number: 9090
